Bug 120814 - KDE5: Not all icons in the main menu visible
Summary: KDE5: Not all icons in the main menu visible
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: x86-64 (AMD64) Linux (All)
: medium trivial
Assignee: Aleksei Nikiforov
URL:
Whiteboard: target:6.3.0 target:6.2.0.1
Keywords:
Depends on:
Blocks: Main-Menu KDE, KF5
  Show dependency treegraph
 
Reported: 2018-10-23 06:20 UTC by Nick Safonov
Modified: 2019-01-10 06:38 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
no icons (77.26 KB, image/png)
2018-10-23 09:30 UTC, Vera Blagoveschenskaya
Details
icons-options (164.52 KB, image/png)
2018-10-24 10:56 UTC, Vera Blagoveschenskaya
Details
KDE5 - icons are visible (93.13 KB, image/png)
2018-12-03 12:50 UTC, Vera Blagoveschenskaya
Details
GTK3 - icons are NOT visible (76.54 KB, image/png)
2018-12-03 12:51 UTC, Vera Blagoveschenskaya
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nick Safonov 2018-10-23 06:20:03 UTC
Description:
in dropdown menus not all icons
(XML Filter Settings/Extension Manager/etc.)

Steps to Reproduce:
1.open LO Writer,Calc,other
2.select item(tools,edit)
3.

Actual Results:
not all icons

Expected Results:
need icons on each item


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Version: 6.2.0.0.alpha1
Build ID: ff46ad24d1d3cbcea45895520483ed1fd4ff488b
CPU threads: 4; OS: Linux 4.18; UI render: default; VCL: gtk3; 
Locale: ru-RU (ru_RU.UTF-8); Calc: threaded
Comment 1 Vera Blagoveschenskaya 2018-10-23 09:30:04 UTC
Confirmed from my side

Reproduced for

Version: 6.2.0.0.alpha1
Build ID: ff46ad24d1d3cbcea45895520483ed1fd4ff488b
CPU threads: 1; OS: Linux 4.14; UI render: default; VCL: kde5; 
Locale: ru-RU (ru_RU.UTF-8); Calc: threaded

NOT reproduced for

Version: 6.1.2.1
Build ID: 65905a128db06ba48db947242809d14d3f9a93fe
CPU threads: 4; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: ru-RU (ru_RU.UTF-8); Calc: group threaded
Comment 2 Vera Blagoveschenskaya 2018-10-23 09:30:46 UTC
Created attachment 145924 [details]
no icons
Comment 3 Xisco Faulí 2018-10-24 10:02:18 UTC
I can't reproduced it in

Version: 6.2.0.0.alpha1+
Build ID: cd6dd8c6f3562cbccbc971b916c6a8933840ffeb
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

Please, check Icons in Menu is set to Show in Tools - Options - View

Setting to NEEDINFO
Comment 4 Vera Blagoveschenskaya 2018-10-24 10:56:25 UTC
(In reply to Xisco Faulí from comment #3)
> I can't reproduced it in
> 
> Version: 6.2.0.0.alpha1+
> Build ID: cd6dd8c6f3562cbccbc971b916c6a8933840ffeb
> CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
> Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

Please check for KDE5

> Please, check Icons in Menu is set to Show in Tools - Options - View
> 
> Setting to NEEDINFO

Set to 'Show'
See screenshot.
Comment 5 Vera Blagoveschenskaya 2018-10-24 10:56:44 UTC
Created attachment 145968 [details]
icons-options
Comment 6 Xisco Faulí 2018-10-24 11:07:04 UTC
This is a KDE5 problem

reproduced in

Version: 6.2.0.0.alpha0+
Build ID: 3846561f79cf9065abd9ca83c9fbfbe7e52e28e2
CPU threads: 1; OS: Linux 4.13; UI render: default; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-10-21_02:45:54
Locale: en-US (en_US.UTF-8); Calc: threaded

but not in

Version: 6.2.0.0.alpha0+
Build ID: 3846561f79cf9065abd9ca83c9fbfbe7e52e28e2
CPU threads: 1; OS: Linux 4.13; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-10-21_02:45:54
Locale: en-US (en_US.UTF-8); Calc: threaded
Comment 7 Roman Kuznetsov 2018-11-07 16:40:26 UTC
I confirm it

Версия: 6.2.0.0.alpha1+
ID сборки: 7cf6cee97bc05512fae482733ee45f039e9d2160
Потоков ЦП: 4; ОС:Linux 4.18; Отрисовка ИП: по умолчанию; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-11-04_22:10:34
Локаль: ru-RU (ru_RU.UTF-8); Calc: threaded
Comment 8 Michael Weghorn 2018-11-07 20:56:40 UTC
@Xisco: Do you actually see the icons in the menu when using gtk3?
For me, the menu icons are missing for both, gtk3 and kde5, while they are shown e.g. for gen/x11, gtk2 or kde4.
Comment 9 Commit Notification 2018-11-29 17:38:56 UTC
Aleksei Nikiforov committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/cb37c789c93825232924e797ffcac7fd5edfca6a%5E%21

tdf#120814 KDE5: Assign images to menu items on first build of menu

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Vera Blagoveschenskaya 2018-12-03 12:50:16 UTC
Thank you, Aleksei.

I've checked the fix for KDE5 - icons became visible (see screenshot kde5-03-12-2018.png)

Version: 6.3.0.0.alpha0+
Build ID: e4c2d0bb57ab8ea8f5c400d103d01376b8140f22
CPU threads: 1; OS: Linux 4.14; UI render: default; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-11-30_21:37:10
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded

BUT icons are still NOT visible for gtk3 (see screenshot gtk3-03-12-2018.png)

Version: 6.3.0.0.alpha0+
Build ID: e4c2d0bb57ab8ea8f5c400d103d01376b8140f22
CPU threads: 1; OS: Linux 4.14; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-11-30_21:37:10
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded
Comment 11 Vera Blagoveschenskaya 2018-12-03 12:50:52 UTC
Created attachment 147239 [details]
KDE5 - icons are visible
Comment 12 Vera Blagoveschenskaya 2018-12-03 12:51:27 UTC
Created attachment 147240 [details]
GTK3 - icons are NOT visible
Comment 13 Caolán McNamara 2018-12-03 13:55:19 UTC
Menus in the gtk3 menus by default follow the gtk-menu-images setting which is off in gtk by default. This can be overridden with tools->options->view->icons in menus
Comment 14 Vera Blagoveschenskaya 2018-12-03 14:01:44 UTC
(In reply to Caolán McNamara from comment #13)
> Menus in the gtk3 menus by default follow the gtk-menu-images setting which
> is off in gtk by default. This can be overridden with
> tools->options->view->icons in menus

Thank you for advice. 
Setting 'tools->options->view->icons in menus' was Automatic by default and icons were hidden. Is it correct? 

Set to 'Show' --> icons became visible.
Comment 15 Commit Notification 2018-12-14 13:30:38 UTC
Aleksei Nikiforov committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/1a8cb9df631d820ed488cb6faafacbbf11a3f913%5E%21

tdf#120814 KDE5: Assign images to menu items on first build of menu

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Vera Blagoveschenskaya 2019-01-10 06:38:38 UTC
Verified due to 
https://bugs.documentfoundation.org/show_bug.cgi?id=120814#c11